# 10over

./: Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  release.yml
docs/: SEQUENCE.md  WIRE.md
examples/: r10.rs
proto/: GDIEventSharing.proto  GDILaunchMonitor.proto  GDISmart.proto
src/: ble.rs  bluez.rs  btleplug.rs  client.rs  cobs.rs  crc.rs  error.rs  gfdi.rs  lib.rs  multilink.rs  proto.rs
src/frp/: convert.rs  mod.rs
